kubernetes/main/apps/guacamole/guacamole/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-deployment
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
    spec:
      containers:
        - name: guacamole
          image: flcontainers/guacamole:1.5.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
            - name: properties
              mountPath: /app/guacamole/guacamole.properties
              subPath: guacamole.properties
          ports:
            - containerPort: 8080
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: guacamole-pvc
        - name: properties
          configMap:
            name: guacamole-configmap
