kubernetes/main/apps/guacamole/guacamole/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
spec:
  selector:
    app.kubernetes.io/name: guacamole
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
