kubernetes/main/apps/guacamole/guacamole/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole
  namespace: guacamole
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`guacamole.k.04a.ca`)
      kind: Rule
      services:
        - name: guacamole
          namespace: guacamole
          port: 8080
    - match: Host(`access.t.04a.ca`)
      kind: Rule
      middlewares:
        - name: authelia-middleware
          namespace: traefik
      services:
        - name: guacamole
          namespace: guacamole
          port: 8080
  #tls:
  # secretName: local-04a-ca-staging-tls
  # tls:
  #   certResolver: default
